overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
 
 html{
     background-color: #000D3F;
+    overflow-x: hidden;
 }
